feature(stress-tools): add cs_extra_jvm_opts config for cassandra-stress JVM tuning
Add cs_extra_jvm_opts parameter that passes extra JVM options to
cassandra-stress via the JVM_OPTS environment variable in Docker.
Uses ZGC Generational for sub-millisecond GC pauses, eliminating
flaky P99 latency spikes caused by JVM GC during step transitions.

Includes logging to confirm JVM_OPTS are passed and verified inside
the container before stress execution begins.